P4-Ch.02/ecommerce-order/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-order
spec:
  selector:
    app: ecommerce-order
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
