P4-Ch.02/ecommerce-order/deploy/virtual-service.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ecommerce-order
spec:
  hosts:
    - ecommerce-order.apps.kowlon.my.id
    - ecommerce-order
  gateways:
    - istio-system/apps
  http:
    - match: 
        - uri:
            prefix: /  
      route:
        - destination:
            port:
              number: 80
            host: ecommerce-order
